# ufs2arco

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  coverage.toml  environment.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  integration.yaml  manual_pr.yaml  publish.yaml  unit.yaml
docs/: anemoi_target.rst  aorc.rst  api.rst  base_target.rst  capability_overview.rst  conf.py  config-replay.yaml  contributing.rst  create_pressure_lists.py  create_variable_tables.py  example_pressure_interpolation.ipynb  example_replay_cice6.ipynb  example_replay_fv3.ipynb  example_replay_mom6.ipynb  gefs_archive.rst  gfs_archive.rst  hrrr_archive.rst  index.rst  installation.rst  levels.gefs.rst  levels.gfs.rst  levels.hrrr.rst  moving_data.rst  read_and_store_ocean.ipynb  read_and_store_replay.ipynb  support.rst  testing_regrid.ipynb  variable_notes.rst  variables.gefs.rst  variables.gfs.rst  variables.hrrr.rst
docs/archive/: example_replay_fv3.ipynb  example_replay_mom6.ipynb
examples/gefs/: .gitignore  recipe.one.yaml  recipe.yaml  run_one.py  run_zarrify.py  submit_one.sh
examples/noaa-grib-adventures/: .gitignore  README.md  get_common_gfs_height_vars.ipynb  get_common_gfs_meansea_vars.ipynb  get_common_gfs_surface_vars.ipynb  get_common_hrrr_atmosphere_vars.ipynb  get_common_hrrr_height_vars.ipynb  get_common_hrrr_meansea_vars.ipynb  get_common_hrrr_surface_vars.ipynb  plot_staticvars.ipynb  read_gfs_for_real.ipynb  read_gfs_for_real_again.ipynb  read_hrrr_for_real.ipynb
examples/replay/: .gitignore  README.md  append_geopotential.py  append_static_vars.py  chunking_basics.ipynb  compute_geopotential.py  config-0.25-degree.yaml  config-1.00-degree.yaml  fill_quarter_degree.py  find_nans.sh  localzarr.py  move_one_degree.py  move_quarter_degree.py  plot_geopotential_verification.ipynb  read_replay_gcs.ipynb  replay_filler.py  replay_mover.py  submit_1deg_geopotential_append.sh  submit_geopotential_append.sh  submit_move_quarter.sh  submit_qdegsub_geopotential_append.sh  verify_gcs.py  verify_geopotential.py
regrid/: README.md  __init__.py  config-regrid.yaml  gaussian_grid.py  regrid.py  regrid_env.yaml  regrid_ocean.py
tests/: test_datamover.py  test_driver.py  test_gefsdataset.py  test_layers2pressure.py  test_multidriver.py  test_ufsdataset.py  test_utils.py
tests/integration/: .gitignore  README.md  aorc.anemoi.yaml  aorc.base.yaml  era5.anemoi.yaml  era5.base.yaml  gefs.anemoi.yaml  gefs.base.yaml  gefs.mpi.yaml  gefs.serial.yaml  gefsdataset.mpi.yaml  gefsdataset.serial.yaml  gfs.anemoi.yaml  gfs.anemoi_inference_with_forcings.yaml  gfs.base.yaml  hrrr.anemoi.yaml  hrrr.anemoi_inference_with_forcings.yaml  hrrr.base.yaml  replay.anemoi.yaml  replay.base.yaml  run_dataset_test.py  test_datasets.py  test_gefs.sh  test_gefsdataset.sh
tests/sources/: test_aorc.py  test_base.py  test_cloud_zarr.py  test_gcs_era5_1degree.py  test_gcs_replay_atmosphere.py  test_gefs_archive.py  test_gfs_archive.py  test_hrrr_archive.py  test_noaa_grib_forecast.py
tests/targets/: test_anemoi_target.py  test_base_target.py  test_forcings.py
ufs2arco/: __init__.py  anemoidataset.py  batchloader.py  cice6dataset.py  cli.py  datamover.py  driver.py  forecastdataset.py  fv3dataset.py  gaussian_grid.py  gefsdataset.py  layers2pressure.py  log.py  mom6dataset.py  mpi.py  multidriver.py  regrid_cice6.py  regrid_mom6.py  regrid_ufs.py  replay_vertical_levels.yaml  sourcedataset.py  targetdataset.py  timer.py  ufsdataset.py  utils.py
(+44 files in other folders)
