[project]
name = "ufs2arco"
version = "0.4.2"
description = "Tools for converting Unified Forecast System (UFS) output to Analysis Ready, Cloud Optimized (ARCO) format"
authors = [
    {name="Timothy Smith", email="tim.smith@noaa.gov"},
    {name="Daniel Abdi"},
    {name="Mariah Pope"},
    {name="Lauryn Eldridge"},
    {name="Ken Witt"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "xarray",
    "netCDF4",
    "h5netcdf",
    "bottleneck",
    "dask[complete]",
    "zarr<3",
    "cftime",
    "fsspec",
    "s3fs",
    "gcsfs",
    "pytest",
    "coverage",
    "cfgrib",
]

[project.optional-dependencies]
documentation = [
    "jupyter", "nbsphinx", "sphinx-book-theme",
]
mpi = [
    "mpi4py",
]

[project.urls]
source="https://github.com/NOAA-PSL/ufs2arco"
documentation="https://ufs2arco.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ufs2arco"]
